--- a/style.css
+++ b/style.css
@@ -14,6 +14,24 @@ input {
   outline: none;
 }
 
+@-webkit-keyframes fadein {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadein {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 section.results {
   display: -ms-grid;
   display: grid;
@@ -21,12 +39,27 @@ section.results {
       grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
   grid-gap: 32px 32px;
   padding: 32px;
+  font-size: 12px;
+}
+
+section.results .single-result h2 {
+  font-weight: 700;
 }
 
 section.results .single-result .image {
   background: #eee;
   height: 350px;
   margin: 0 0 16px 0;
+  padding: 32px;
+}
+
+section.results .single-result img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -webkit-animation: fadein 1s 0.5s both;
+          animation: fadein 1s 0.5s both;
 }
 
 section.results .single-result span.loading {
